--- a/DOM PROJECT/SCROLL/index.html
+++ b/DOM PROJECT/SCROLL/index.html
@@ -17,7 +17,7 @@
             <div class="nav-center">
                 <!--nav header-->
                 <div class="nav-header">
-                    <img src="images/logo.svg" class="logo" alt="logo">
+                    <a href="#home"><img src="images/logo.svg" class="logo" alt="logo"></a>
                     <button class="nav-toggle">
                         <i class="fas fa-bars"></i>
                     </button>
@@ -62,7 +62,7 @@
     <!--end of about-->
 
     <!--services-->
-    <section id="about" class="section">
+    <section id="services" class="section">
         <div class="title">
             <h2>our <span>services</span></h2>
         </div>
@@ -70,7 +70,7 @@
     <!--end of services-->
 
     <!--featured tours-->
-    <section id="about" class="section">
+    <section id="tours" class="section">
         <div class="title">
             <h2>featured <span>tours</span></h2>
         </div>
