--- a/OBJECTS/Object basics/index.html
+++ b/OBJECTS/Object basics/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Object basics</h1>
+    <button class="btn-1">Click me</button>
+    <button class="btn-2">Click me</button>
     
 
     <script src="app.js"></script>
+    <script src="../This/thisObject.js"></script>
 </body>
 </html>
