Budget app mise en place

--- a/OBJECT PROJECT/Flash Card/index.html
+++ b/OBJECT PROJECT/Flash Card/index.html
@@ -13,7 +13,7 @@
  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 
  <!-- font awesome -->
- <link rel="stylesheet" href="CSS/all.css">
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
  <title>Flashcard Project</title>
  <style>
  </style>
