--- a/ES6+/Template String/index.html
+++ b/ES6+/Template String/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template String</title>
+    <style>
+        body{
+            text-transform: capitalize;
+        }
+        .blue{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
+    <h1>Info</h1>
+    <div id="result"></div>
+
     <script src="app.js"></script>
 </body>
 </html>
