--- a/ES6+/Arr of arr from/index.html
+++ b/ES6+/Arr of arr from/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arr of, arr from</title>
+    <title>Arr.of, arr.from</title>
 </head>
 <body>
-    
+    <h1>ES6</h1>
+    <p>Sam</p>
+    <p>Helene</p>
+    <p>Amanda</p>
+
+    <h2 id="result"></h2>
+    <h1 id="second"></h1>
 
     <script src="app.js"></script>
 </body>
