--- a/AJAX/Simple Text/index.html
+++ b/AJAX/Simple Text/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <h1>AJAX</h1>
-    
+    <button type="button" class="btn">Show Text</button>
     
     <script src="app.js"></script>
 </body>
