--- a/BASIC PROJECTS/Random Joke/index.html
+++ b/BASIC PROJECTS/Random Joke/index.html
@@ -14,6 +14,7 @@
             <p class="content"></p>
         </div>
     </main>
-    <script src="xhr.js"></script>
+    <!-- <script src="xhr.js"></script> -->
+    <script src="promises.js"></script>
   </body>
 </html>
