Random joke Fetch

--- a/BASIC PROJECTS/Random Joke/index.html
+++ b/BASIC PROJECTS/Random Joke/index.html
@@ -15,6 +15,7 @@
         </div>
     </main>
     <!-- <script src="xhr.js"></script> -->
-    <script src="promises.js"></script>
+    <!-- <script src="promises.js"></script> -->
+    <script src="fetch.js"></script>
   </body>
 </html>
