--- a/BASIC PROJECTS/Cocktails/index.html
+++ b/BASIC PROJECTS/Cocktails/index.html
@@ -19,18 +19,18 @@
         <input type="text" placeholder="Search your favorite cocktail" name="drink">
     </form>
     <section class="section cocktails">
-        <article class="loading hide-loading">
+        <article class="loading">
             <img src="images/loading.gif" alt="loading">
         </article>
         <h2 class="title"></h2>
         <div class="section-center">
             <!--single drink-->
-            <a href="drink.html">
+            <!-- <a href="drink.html">
                 <article class="cocktail" data-id="1">
                     <img src="images/cocktail.jpg" alt="cocktail">
                     <h3>martini</h3>
                 </article>
-            </a>
+            </a> -->
             <!--End of single drink-->
         </div>
     </section>
