--- a/BASIC PROJECTS/Cocktails/index.html
+++ b/BASIC PROJECTS/Cocktails/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <!-- css -->
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -37,6 +37,6 @@
 
 
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
