--- a/PROJECT HOUSE/index.html
+++ b/PROJECT HOUSE/index.html
@@ -24,6 +24,16 @@
         </div>
     </nav>
     <!--End of navbar-->
+
+    <!--Hero-->
+    <header class="hero">
+        <div class="banner">
+            <h1 class="banner-title">furniture collection</h1>
+            <button class="banner-btn">shop now</button>
+        </div>
+
+    </header>
+    <!--End Of Hero-->
     
 
     <script src="app.js"></script>
