--- a/PROJECT HOUSE/index.html
+++ b/PROJECT HOUSE/index.html
@@ -34,6 +34,30 @@
 
     </header>
     <!--End Of Hero-->
+
+    <!--Product-->
+    <section class="product">
+        <div class="section-title">
+            <h2>our product</h2>
+        </div>
+        <div class="products-center">
+            <!--single product-->
+            <article class="product">
+                <div class="img-container">
+                    <img src="images/product-1.jpeg" alt="product" class="product-img">
+                    <button class="bag-btn" data-id="1">
+                        <i class="fas fa-shopping-cart"></i>
+                        add to bag
+                    </button>
+                </div>
+                <h3>queen size bed</h3>
+                <h4>$18</h4>
+            </article>
+            <!--end of single product-->
+        </div>
+
+    </section>
+    <!--End Of Product-->
     
 
     <script src="app.js"></script>
