--- a/PROJECT HOUSE/index.html
+++ b/PROJECT HOUSE/index.html
@@ -58,7 +58,38 @@
 
     </section>
     <!--End Of Product-->
-    
+
+    <!--Cart-->
+    <div class="cart-overlay">
+        <div class="cart">
+            <span class="close-cart">
+                <i class="fas fa-window-close"></i>
+            </span>
+            <h2>your cart</h2>
+            <div class="cart-content">
+                <!--cart item-->
+                <div class="cart-item">
+                    <img src="images/product-1.jpeg" alt="product">
+                    <div>
+                        <h4>queen size bed</h4>
+                        <h5>$90.00</h5>
+                        <span class="remove-item">remove</span>
+                    </div>
+                    <div>
+                        <i class="fas fa-chevron-up"></i>
+                        <p class="item-amount">1</p>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                </div>
+                <!--end of cart item-->
+            </div>
+            <div class="cart-footer">
+                <h3>your total: $ <span class="cart-total">0</span></h3>
+                <button class="clear-cart banner-btn">clear cart</button>
+            </div>
+        </div>
+    </div>
+    <!--End of Cart-->    
 
     <script src="app.js"></script>
 </body>
