--- a/PROJECT HOUSE/index.html
+++ b/PROJECT HOUSE/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="products-center">
             <!--single product-->
-            <article class="product">
+            <!-- <article class="product">
                 <div class="img-container">
                     <img src="images/product-1.jpeg" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1">
@@ -52,7 +52,7 @@
                 </div>
                 <h3>queen size bed</h3>
                 <h4>$18</h4>
-            </article>
+            </article> -->
             <!--end of single product-->
         </div>
 
