display cart item

--- a/PROJECT HOUSE/index.html
+++ b/PROJECT HOUSE/index.html
@@ -68,8 +68,8 @@
             <h2>your cart</h2>
             <div class="cart-content">
                 <!--cart item-->
-                <div class="cart-item">
-                    <img src="images/product-1.jpeg" alt="product">
+                <!--<div class="cart-item">-->
+                    <!-- <img src="images/product-1.jpeg" alt="product">
                     <div>
                         <h4>queen size bed</h4>
                         <h5>$90.00</h5>
@@ -79,8 +79,8 @@
                         <i class="fas fa-chevron-up"></i>
                         <p class="item-amount">1</p>
                         <i class="fas fa-chevron-down"></i>
-                    </div>
-                </div>
+                    </div> -->
+                <!--</div>-->
                 <!--end of cart item-->
             </div>
             <div class="cart-footer">
